--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
-  <title>Artsom Ouro Preto - RO | Contato</title>
+  <title>Artsom Ouro Preto - RO</title>
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Artsom Ouro Preto do Oeste - RO. Pneus, baterias, insulfilm térmico e som automotivo. Ligue ou chame no WhatsApp.">
+  <meta name="description" content="Artsom Ouro Preto do Oeste - RO. Pneus, baterias, insulfilm térmico e som automotivo.">
 
   <style>
     *{
@@ -15,48 +15,49 @@
     }
 
     body{
+      width:100vw;
       height:100vh;
       font-family: Arial, Helvetica, sans-serif;
-      color:#fff;
       overflow:hidden;
-
-      /* IMAGEM DE FUNDO TELA CHEIA */
-      background-image: url("logo.png");
-      background-size: cover;
-      background-position: center;
-      background-repeat: no-repeat;
-      background-color:#000;
-    }
-
-    .container{
-      width:100%;
-      height:100%;
+      background:#000; /* fundo preto no PC */
       display:flex;
       align-items:center;
       justify-content:center;
     }
 
+    /* CONTAINER DA ARTE (FORMATO CELULAR) */
+    .mobile-wrapper{
+      width:100%;
+      max-width:430px;      /* largura padrão celular */
+      height:100vh;
+      max-height:100vh;
+
+      background-image: url("logo.png");
+      background-size: cover;
+      background-position: center;
+      background-repeat: no-repeat;
+
+      display:flex;
+      align-items:flex-end;
+      justify-content:center;
+      padding-bottom:40px;
+    }
+
+    /* BOTÕES */
     .botoes{
       display:flex;
-      gap:16px;
-      flex-wrap:wrap;
-      justify-content:center;
+      gap:14px;
     }
 
     .btn{
-      min-width:160px;
-      padding:16px 22px;
-      font-size:18px;
+      min-width:150px;
+      padding:14px 18px;
+      font-size:16px;
       font-weight:900;
-      border-radius:16px;
+      border-radius:14px;
       text-decoration:none;
       text-align:center;
-      box-shadow:0 12px 25px rgba(0,0,0,.5);
-      transition:0.2s ease;
-    }
-
-    .btn:hover{
-      transform: translateY(-2px);
+      box-shadow:0 10px 20px rgba(0,0,0,.5);
     }
 
     .ligar{
@@ -68,23 +69,15 @@
       background:#25D366;
       color:#000;
     }
-
-    @media (max-width:600px){
-      .btn{
-        font-size:16px;
-        padding:14px 18px;
-        min-width:140px;
-      }
-    }
   </style>
 </head>
 
 <body>
 
-  <div class="container">
+  <div class="mobile-wrapper">
     <div class="botoes">
       <a href="tel:+5569992585790" class="btn ligar">📞 LIGAR</a>
-      <a href="https://wa.me/5569992585790" target="_blank" class="btn whatsapp">💬 WHATSAPP</a>
+      <a href="https://wa.me/5569992585790" class="btn whatsapp">💬 WHATSAPP</a>
     </div>
   </div>
 
