--- a/index.html
+++ b/index.html
@@ -2,91 +2,47 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Artsom Ouro Preto - RO</title>
 
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Artsom Ouro Preto do Oeste - RO. Pneus, baterias, insulfilm térmico e som automotivo.">
-
   <style>
-    *{ margin:0; padding:0; box-sizing:border-box; }
-
-    body{
-      width:100vw;
-      height:100vh;
-      font-family: Arial, Helvetica, sans-serif;
-      overflow:hidden;
-      background:#000;
-      display:flex;
-      align-items:center;
-      justify-content:center;
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
     }
 
-    .mobile-wrapper{
-      width:100%;
-      max-width:430px;
-      height:100vh;
-      position:relative;
-      background:#000;
-      overflow:hidden;
+    body {
+      height: 100vh;
+      background: black;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      font-family: Arial, sans-serif;
     }
 
-    /* ARTE SEM CORTAR */
-    .bg{
-      position:absolute;
-      inset:0;
-      background-image:url("logo.png");
-      background-repeat:no-repeat;
-      background-position:center top;
-      background-size:contain;
+    .container {
+      position: relative;
+      width: 100%;
+      max-width: 430px; /* largura típica de celular */
+      height: 100vh;
     }
 
-    /* BOTÕES NO ESPAÇO BRANCO */
-    .botoes{
-      position:absolute;
-      left:50%;
-      transform:translateX(-50%);
-      bottom:30%;              /* <-- SUBIU (antes era 18%) */
-      display:flex;
-      gap:12px;
-      justify-content:center;
-      z-index:2;
+    .bg {
+      width: 100%;
+      height: 100%;
+      object-fit: cover; /* NÃO corta mais em cima */
+      display: block;
     }
 
-    .btn{
-      min-width:140px;         /* menor pra caber */
-      padding:12px 16px;       /* menor pra não tampar */
-      font-size:15px;
-      font-weight:900;
-      border-radius:14px;
-      text-decoration:none;
-      text-align:center;
-      box-shadow:0 10px 20px rgba(0,0,0,.45);
-      line-height:1.1;
+    .buttons {
+      position: absolute;
+      bottom: 28%; /* 🔥 AQUI você controla a altura */
+      left: 50%;
+      transform: translateX(-50%);
+      display: flex;
+      gap: 14px;
     }
 
-    .ligar{ background:#ffffff; color:#000; }
-    .whatsapp{ background:#25D366; color:#000; }
-
-    /* se o celular for muito baixinho, sobe um pouco mais */
-    @media (max-height:720px){
-      .botoes{ bottom:32%; }
-    }
-
-    /* se o celular for bem alto, pode descer um tiquinho */
-    @media (min-height:900px){
-      .botoes{ bottom:28%; }
-    }
-  </style>
-</head>
-
-<body>
-  <div class="mobile-wrapper">
-    <div class="bg"></div>
-
-    <div class="botoes">
-      <a href="tel:+5569992585790" class="btn ligar">📞 LIGAR</a>
-      <a href="https://wa.me/5569992585790" target="_blank" class="btn whatsapp">💬 WHATSAPP</a>
-    </div>
-  </div>
-</body>
-</html>
+    .btn {
+      display: f
