--- a/index.html
+++ b/index.html
@@ -45,4 +45,41 @@
     }
 
     .btn {
-      display: f
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      gap: 8px;
+      padding: 14px 22px;
+      border-radius: 14px;
+      font-size: 16px;
+      font-weight: bold;
+      text-decoration: none;
+      box-shadow: 0 8px 20px rgba(0,0,0,0.35);
+      white-space: nowrap;
+    }
+
+    .ligar {
+      background: white;
+      color: black;
+    }
+
+    .whatsapp {
+      background: #25D366;
+      color: black;
+    }
+  </style>
+</head>
+
+<body>
+
+  <div class="container">
+    <img src="logo.png" alt="Artsom Ouro Preto" class="bg">
+
+    <div class="buttons">
+      <a href="tel:+5569992585790" class="btn ligar">📞 LIGAR</a>
+      <a href="https://wa.me/5569992585790" class="btn whatsapp">💬 WHATSAPP</a>
+    </div>
+  </div>
+
+</body>
+</html>
