--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
     /* BOTÕES NO ESPAÇO BRANCO */
     .botoes{
       position:absolute;
+      top:50%;
       left:50%;
-      transform:translateX(-50%);
-      bottom:50%;              /* <-- SUBIU (antes era 40%) */
+      transform:translate(-50%, -50%);
       display:flex;
       gap:12px;
       justify-content:center;
