--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       overflow:hidden;
       background:#000;
       display:flex;
-      align-items:center;
+      align-items:flex-start;
       justify-content:center;
     }
 
